package edu.advising.navmenu;

public interface DashboardWidget {
    void render();
    void refresh();
}
